Attempting to stop animation flickering in some browsers, such as Mobile Safari (iOS) 😑

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -210,6 +210,7 @@ a:hover {
       background: inherit;
       border-radius: inherit;
       backface-visibility: hidden;
+      transform-style: preserve-3d;
       transition: filter $animation-speed-fast $animation-timing-function-natural;
 
       &:hover {
